--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 
 # site-wide variables
 title: Evolutionary Systems Biophysics Lab # title of site, used in tab name and elsewhere
-email: rob@cs.umd.edu # default email
-google: Rob Patro # default name to search on Google Scholar
-github: COMBINE-lab # default GitHub user/org, without the @
-twitter: nomad421 # default Twitter handle, without the @
+email: gonzalo.para@bsc.es # default email
+google: R. Gonzalo Parra # default name to search on Google Scholar
+github: gonzaparra # default GitHub user/org, without the @
+twitter: GonzaParra_ # default Twitter handle, without the @
 #instagram: fakeinstagramhandle # default Instagram handle, without the @
 #youtube: fakeyoutubechannel # default YouTube channel handle
 
