--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -31,5 +31,6 @@
   type: software
   image: images/frustra.png
   description: Web server to localise and quantify frustration in protein structures. This software is developed and maintained in collaboration with Prof. Diego U. Ferreiro from the Protein Physiology Lab from Buenos Aires University in Argentina.
+  repo: proteinphysiologylab/frustratometeR
   url: http://frustratometer.qb.fcen.uba.ar/eteR
 
